--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 <!--The whole content below can be removed with the new code.-->
 <h1>{{title}}</h1>
-<h2>{{hero.name}} details!</h2>
-<div>
-  <label>id: {{hero.id}}</label>
-</div>
-<div>
-  <label>name: </label>
-  <input [(ngModel)]="hero.name" placeholder="name">
-</div>
+<h2>My Heroes</h2>
+<ul class="heroes">
+  <li *ngFor="let hero of heroes"
+      [class.selected]="hero ==== selectedHero"
+      (click)="onSelect(hero)" )>
+    <span class="badge">{{hero.id}}</span> {{hero.name}}
+  </li>
+</ul>
 
