--- a/src/app/heroes.component.html
+++ b/src/app/heroes.component.html
@@ -11,4 +11,5 @@
     {{selectedHero.name | uppercase}} is my hero
   </h2>
   <button (click)="gotoDetail()">View Details</button>
+  <!--<a [routerLink]="['/detail', selectedHero.id]">View Details</a>-->
 </div>
