--- a/src/pages/friends/index.scss
+++ b/src/pages/friends/index.scss
@@ -1,17 +1,17 @@
 .friends-page {
   min-height: 100vh;
   background-color: #f5f5f5;
-  padding: 20px;
+  padding: 20rpx;
   display: flex;
   flex-direction: column;
 }
 
 .page-header {
-  margin-bottom: 30px;
+  margin-bottom: 30rpx;
 }
 
 .page-title {
-  font-size: 20px;
+  font-size: 30rpx;
   font-weight: 600;
   color: #333;
 }
@@ -19,16 +19,16 @@
 .friends-list {
   flex: 1;
   background-color: #fff;
-  border-radius: 8px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.06);
+  border-radius: 8rpx;
+  box-shadow: 0 2rpx 8rpx rgba(0, 0, 0, 0.06);
   overflow: hidden;
 }
 
 .friend-item {
   display: flex;
   align-items: center;
-  padding: 16px 20px;
-  border-bottom: 1px solid #f0f0f0;
+  padding: 16rpx 20rpx;
+  border-bottom: 1rpx solid #f0f0f0;
   
   &:last-child {
     border-bottom: none;
@@ -37,24 +37,24 @@
 
 .friend-avatar-container {
   position: relative;
-  margin-right: 16px;
+  margin-right: 16rpx;
 }
 
 .friend-avatar {
-  width: 50px;
-  height: 50px;
+  width: 50rpx;
+  height: 50rpx;
   border-radius: 50%;
-  border: 2px solid #e0e0e0;
+  border: 2rpx solid #e0e0e0;
 }
 
 .status-indicator {
   position: absolute;
   bottom: 0;
   right: 0;
-  width: 16px;
-  height: 16px;
+  width: 16rpx;
+  height: 16rpx;
   border-radius: 50%;
-  border: 2px solid #fff;
+  border: 2rpx solid #fff;
   
   &.online {
     background-color: #4CAF50;
@@ -66,7 +66,7 @@
 }
 
 .friend-name {
-  font-size: 16px;
+  font-size: 24rpx;
   color: #333;
   font-weight: 500;
 }
